--- a/app/src/main/res/layout/fragment_detail_wide.xml
+++ b/app/src/main/res/layout/fragment_detail_wide.xml
@@ -1,106 +1,236 @@
+<!--<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent"-->
+    <!--android:fillViewport="true">-->
+
+    <!--<LinearLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:orientation="horizontal"-->
+        <!--android:padding="16dp">-->
+
+        <!--<LinearLayout-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:orientation="vertical">-->
+
+            <!--&lt;!&ndash; Header: Day, Date &ndash;&gt;-->
+            <!--<TextView-->
+                <!--android:id="@+id/detail_item_friendly_date_textview"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:fontFamily="sans-serif-condensed"-->
+                <!--android:textColor="@android:color/black"-->
+                <!--android:textSize="24sp" />-->
+
+            <!--<TextView-->
+                <!--android:id="@+id/detail_item_date_textview"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:paddingBottom="24dp"-->
+                <!--android:textColor="@color/grey_700"-->
+                <!--android:textSize="20sp" />-->
+
+        <!--</LinearLayout>-->
+
+        <!--&lt;!&ndash; Main content: high, low, art, weather state &ndash;&gt;-->
+        <!--<LinearLayout-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginLeft="16dp"-->
+            <!--android:layout_marginStart="16dp"-->
+            <!--android:orientation="vertical">-->
+
+            <!--<TextView-->
+                <!--android:id="@+id/detail_item_high_textview"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:fontFamily="sans-serif-light"-->
+                <!--android:textColor="@android:color/black"-->
+                <!--android:textSize="96sp"-->
+                <!--android:layout_gravity="end"/>-->
+
+            <!--<TextView-->
+                <!--android:id="@+id/detail_item_low_textview"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:fontFamily="sans-serif-light"-->
+                <!--android:textSize="48sp"-->
+                <!--android:layout_gravity="end"/>-->
+
+            <!--&lt;!&ndash; Humidity, wind, pressure &ndash;&gt;-->
+            <!--<TextView-->
+                <!--android:id="@+id/detail_item_humidity_textview"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:fontFamily="sans-serif-condensed"-->
+                <!--android:textAppearance="@android:style/TextAppearance.Large" />-->
+
+            <!--<TextView-->
+                <!--android:id="@+id/detail_wind_textview"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:fontFamily="sans-serif-condensed"-->
+                <!--android:paddingBottom="4dp"-->
+                <!--android:paddingTop="4dp"-->
+                <!--android:textAppearance="@android:style/TextAppearance.Large" />-->
+
+            <!--<TextView-->
+                <!--android:id="@+id/detail_pressure_textview"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:fontFamily="sans-serif-condensed"-->
+                <!--android:textAppearance="@android:style/TextAppearance.Large" />-->
+        <!--</LinearLayout>-->
+
+        <!--<LinearLayout-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:gravity="center_horizontal"-->
+            <!--android:orientation="vertical">-->
+
+            <!--<ImageView-->
+                <!--android:id="@+id/detail_item_icon"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:adjustViewBounds="true"/>-->
+
+            <!--<TextView-->
+                <!--android:id="@+id/detail_item_forecast_textview"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:textAppearance="@android:style/TextAppearance.Large"-->
+                <!--android:fontFamily="sans-serif-condensed"/>-->
+        <!--</LinearLayout>-->
+    <!--</LinearLayout>-->
+<!--</ScrollView>-->
+
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+<FrameLayout
+android:layout_width="match_parent"
+android:layout_height="match_parent">
+
+<LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fillViewport="true">
+    android:orientation="horizontal"
+    android:baselineAligned="false">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="16dp">
+    <FrameLayout
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        >
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+        <include layout="@layout/detail_today_grid"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
 
-            <!-- Header: Day, Date -->
-            <TextView
-                android:id="@+id/detail_item_friendly_date_textview"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="sans-serif-condensed"
-                android:textColor="@android:color/black"
-                android:textSize="24sp" />
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:elevation="0dp"
+            android:background="@android:color/transparent"/>
 
-            <TextView
-                android:id="@+id/detail_item_date_textview"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingBottom="24dp"
-                android:textColor="@color/grey_700"
-                android:textSize="20sp" />
+    </FrameLayout>
 
-        </LinearLayout>
+    <android.support.v7.widget.GridLayout
+        android:id="@+id/detail_additional_pane"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        app:columnCount="2"
+        android:background="@color/detail_accent_pane_background"
+        android:paddingEnd="@dimen/abc_list_item_padding_horizontal_material"
+        android:paddingRight="@dimen/abc_list_item_padding_horizontal_material"
+        >
 
-        <!-- Main content: high, low, art, weather state -->
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:layout_marginStart="16dp"
-            android:orientation="vertical">
+        <android.support.v7.widget.Space
+            app:layout_columnSpan="2"
+            app:layout_rowWeight="1" />
 
-            <TextView
-                android:id="@+id/detail_item_high_textview"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="sans-serif-light"
-                android:textColor="@android:color/black"
-                android:textSize="96sp"
-                android:layout_gravity="end"/>
+        <TextView
+            android:id="@+id/detail_item_humidity_label_textview"
+            android:fontFamily="sans-serif"
+            android:gravity="center_vertical"
+            android:text="@string/humidity"
+            android:textColor="@color/detail_accent_label"
+            android:textAppearance="@style/TextAppearance.AppCompat.Title"
+            android:paddingLeft="@dimen/abc_list_item_padding_horizontal_material"
+            android:paddingRight="@dimen/abc_list_item_padding_horizontal_material"
+            android:paddingBottom="@dimen/abc_list_item_padding_horizontal_material"
+            />
 
-            <TextView
-                android:id="@+id/detail_item_low_textview"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="sans-serif-light"
-                android:textSize="48sp"
-                android:layout_gravity="end"/>
+        <TextView
+            android:id="@+id/detail_item_humidity_textview"
+            android:fontFamily="sans-serif"
+            android:gravity="center_vertical"
+            tools:text="38%"
+            android:textColor="@android:color/white"
+            android:textAppearance="@style/TextAppearance.AppCompat.Title"
+            />
 
-            <!-- Humidity, wind, pressure -->
-            <TextView
-                android:id="@+id/detail_item_humidity_textview"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="sans-serif-condensed"
-                android:textAppearance="@android:style/TextAppearance.Large" />
+        <TextView
+            android:id="@+id/detail_item_pressure_label_textview"
+            android:fontFamily="sans-serif"
+            android:gravity="center_vertical"
+            android:text="@string/pressure"
+            android:textColor="@color/detail_accent_label"
+            android:textAppearance="@style/TextAppearance.AppCompat.Title"
+            android:paddingTop="@dimen/detail_view_extra_padding"
+            android:paddingLeft="@dimen/abc_list_item_padding_horizontal_material"
+            android:paddingRight="@dimen/abc_list_item_padding_horizontal_material"
+            android:paddingBottom="@dimen/abc_list_item_padding_horizontal_material"
+            />
 
-            <TextView
-                android:id="@+id/detail_wind_textview"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="sans-serif-condensed"
-                android:paddingBottom="4dp"
-                android:paddingTop="4dp"
-                android:textAppearance="@android:style/TextAppearance.Large" />
 
-            <TextView
-                android:id="@+id/detail_pressure_textview"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="sans-serif-condensed"
-                android:textAppearance="@android:style/TextAppearance.Large" />
-        </LinearLayout>
+        <TextView
+            android:id="@+id/detail_item_pressure_textview"
+            android:fontFamily="sans-serif"
+            android:gravity="center_vertical"
+            tools:text="995 hPa"
+            android:textColor="@android:color/white"
+            android:textAppearance="@style/TextAppearance.AppCompat.Title"
+            />
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            android:orientation="vertical">
+        <TextView
+            android:id="@+id/detail_item_wind_label_textview"
+            android:fontFamily="sans-serif"
+            android:gravity="center_vertical"
+            android:text="@string/wind"
+            android:textColor="@color/detail_accent_label"
+            android:textAppearance="@style/TextAppearance.AppCompat.Title"
+            android:paddingTop="@dimen/detail_view_extra_padding"
+            android:paddingLeft="@dimen/abc_list_item_padding_horizontal_material"
+            android:paddingRight="@dimen/abc_list_item_padding_horizontal_material"
+            />
 
-            <ImageView
-                android:id="@+id/detail_item_icon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:adjustViewBounds="true"/>
+        <TextView
+            android:id="@+id/detail_item_wind_textview"
+            android:fontFamily="sans-serif"
+            android:gravity="center_vertical"
+            tools:text="4km/h NW"
+            android:textColor="@android:color/white"
+            android:textAppearance="@style/TextAppearance.AppCompat.Title"
+            />
 
-            <TextView
-                android:id="@+id/detail_item_forecast_textview"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="@android:style/TextAppearance.Large"
-                android:fontFamily="sans-serif-condensed"/>
-        </LinearLayout>
-    </LinearLayout>
+        <com.example.android.sunshine.app.Compass
+            android:id="@+id/mycompass"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginStart="5dp" />
+
+        <android.support.v7.widget.Space
+            app:layout_columnSpan="2"
+            app:layout_rowWeight="1" />
+
+    </android.support.v7.widget.GridLayout>
+</LinearLayout>
+</FrameLayout>
 </ScrollView>
