--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,39 +1,29 @@
-<!--<fragment xmlns:android="http://schemas.android.com/apk/res/android"-->
-    <!--xmlns:tools="http://schemas.android.com/tools"-->
-    <!--android:id="@+id/weather_detail_container"-->
-    <!--android:name="com.example.android.sunshine.app.ForecastFragment"-->
+
+<!--<LinearLayout-->
+<!--xmlns:android="http://schemas.android.com/apk/res/android"-->
+<!--android:layout_width="match_parent"-->
+<!--android:layout_height="wrap_content"-->
+<!--android:orientation="vertical">-->
+
+<!--<android.support.v7.widget.Toolbar-->
+    <!--android:id="@+id/toolbar"-->
     <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="match_parent"-->
-    <!--android:layout_marginLeft="16dp"-->
-    <!--android:layout_marginRight="16dp"-->
-    <!--tools:context="com.example.android.sunshine.app.ForecastFragment"-->
-    <!--tools:layout="@android:layout/list_content" />-->
+    <!--android:layout_height="?attr/actionBarSize"-->
+    <!--android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>-->
 
 <!--<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
-<!--xmlns:tools="http://schemas.android.com/tools"-->
-<!--android:id="@+id/weather_detail_container"-->
-<!--android:layout_width="match_parent"-->
-<!--android:layout_height="match_parent"-->
-<!--tools:context="com.example.android.sunshine.app.DetailActivity"-->
-<!--tools:ignore="MergeRootFrame" />-->
-
-<LinearLayout
-xmlns:android="http://schemas.android.com/apk/res/android"
-android:layout_width="match_parent"
-android:layout_height="wrap_content"
-android:orientation="vertical">
-
-<android.support.v7.widget.Toolbar
-    android:id="@+id/toolbar"
-    android:layout_width="match_parent"
-    android:layout_height="?attr/actionBarSize"
-    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
+    <!--xmlns:tools="http://schemas.android.com/tools"-->
+    <!--android:id="@+id/weather_detail_container"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent"-->
+    <!--tools:context="com.example.android.sunshine.app.DetailActivity"-->
+    <!--tools:ignore="MergeRootFrame" />-->
+<!--</LinearLayout>-->
 
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/weather_detail_container"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.example.android.sunshine.app.DetailActivity"
-    tools:ignore="MergeRootFrame" />
-</LinearLayout>
+xmlns:tools="http://schemas.android.com/tools"
+android:id="@+id/weather_detail_container"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+tools:context="com.example.android.sunshine.app.DetailActivity"
+tools:ignore="MergeRootFrame" />
