--- a/app/src/main/res/layout/detail_today_grid.xml
+++ b/app/src/main/res/layout/detail_today_grid.xml
@@ -1,3 +1,83 @@
+<!--&lt;!&ndash; Detail Layout for Grid &ndash;&gt;-->
+<!--<android.support.v7.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
+    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
+    <!--xmlns:tools="http://schemas.android.com/tools"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent"-->
+    <!--android:background="@android:color/white"-->
+    <!--app:columnCount="2">-->
+
+    <!--<android.support.v7.widget.Space-->
+        <!--android:layout_height="@dimen/detail_view_padding_vertical"-->
+        <!--app:layout_columnSpan="2"-->
+        <!--app:layout_columnWeight="1"-->
+        <!--app:layout_rowWeight="1" />-->
+
+    <!--<TextView-->
+        <!--android:id="@+id/detail_item_friendly_date_textview"-->
+        <!--android:layout_marginBottom="@dimen/abc_list_item_padding_horizontal_material"-->
+        <!--android:layout_marginTop="@dimen/abc_list_item_padding_horizontal_material"-->
+        <!--android:fontFamily="sans-serif"-->
+        <!--android:gravity="center_horizontal"-->
+        <!--android:textAppearance="@style/TextAppearance.AppCompat.Title"-->
+        <!--android:textColor="@color/secondary_text"-->
+        <!--app:layout_columnSpan="2"-->
+        <!--app:layout_columnWeight="1"-->
+        <!--app:layout_gravity="fill_horizontal"-->
+        <!--tools:text="Today, April 03" />-->
+
+    <!--<ImageView-->
+        <!--android:id="@+id/detail_item_icon"-->
+        <!--android:layout_width="0dp"-->
+        <!--android:adjustViewBounds="true"-->
+        <!--android:maxHeight="@dimen/today_icon"-->
+        <!--android:maxWidth="@dimen/today_icon"-->
+        <!--app:layout_columnWeight="1"-->
+        <!--app:layout_gravity="fill_horizontal"-->
+        <!--tools:src="@drawable/art_clouds" />-->
+
+    <!--<TextView-->
+        <!--android:id="@+id/detail_item_high_textview"-->
+        <!--android:layout_width="0dp"-->
+        <!--android:fontFamily="sans-serif-light"-->
+        <!--android:gravity="center_horizontal"-->
+        <!--android:textColor="@color/primary_text"-->
+        <!--android:textSize="72sp"-->
+        <!--app:layout_columnWeight="1"-->
+        <!--app:layout_gravity="fill_horizontal"-->
+        <!--tools:text="19" />-->
+
+    <!--<TextView-->
+        <!--android:id="@+id/detail_item_forecast_textview"-->
+        <!--android:layout_width="0dp"-->
+        <!--android:fontFamily="sans-serif"-->
+        <!--android:gravity="center_horizontal"-->
+        <!--android:textAppearance="@style/TextAppearance.AppCompat.Title"-->
+        <!--android:textColor="@color/secondary_text"-->
+        <!--app:layout_columnWeight="1"-->
+        <!--tools:text="Rainy" />-->
+
+    <!--<TextView-->
+        <!--android:id="@+id/detail_item_low_textview"-->
+        <!--android:layout_width="0dp"-->
+        <!--android:layout_marginBottom="@dimen/abc_list_item_padding_horizontal_material"-->
+        <!--android:fontFamily="sans-serif-light"-->
+        <!--android:gravity="center_horizontal"-->
+        <!--android:textColor="@color/secondary_text"-->
+        <!--android:textSize="36sp"-->
+        <!--app:layout_columnWeight="1"-->
+        <!--tools:text="10" />-->
+
+    <!--<android.support.v7.widget.Space-->
+        <!--android:layout_height="@dimen/detail_view_padding_vertical"-->
+        <!--app:layout_columnSpan="2"-->
+        <!--app:layout_columnWeight="1"-->
+        <!--app:layout_rowWeight="1" />-->
+
+<!--</android.support.v7.widget.GridLayout>-->
+
+
+
 <!-- Detail Layout for Grid -->
 <android.support.v7.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -8,12 +88,13 @@
     app:columnCount="2">
 
     <android.support.v7.widget.Space
+        android:layout_height="@dimen/detail_view_padding_vertical"
         app:layout_columnSpan="2"
         app:layout_columnWeight="1"
         app:layout_rowWeight="1" />
 
     <TextView
-        android:id="@+id/detail_item_friendly_date_textview"
+        android:id="@+id/detail_date_textview"
         android:layout_marginBottom="@dimen/abc_list_item_padding_horizontal_material"
         android:layout_marginTop="@dimen/abc_list_item_padding_horizontal_material"
         android:fontFamily="sans-serif"
@@ -26,7 +107,7 @@
         tools:text="Today, April 03" />
 
     <ImageView
-        android:id="@+id/detail_item_icon"
+        android:id="@+id/detail_icon"
         android:layout_width="0dp"
         android:adjustViewBounds="true"
         android:maxHeight="@dimen/today_icon"
@@ -36,7 +117,7 @@
         tools:src="@drawable/art_clouds" />
 
     <TextView
-        android:id="@+id/detail_item_high_textview"
+        android:id="@+id/detail_high_textview"
         android:layout_width="0dp"
         android:fontFamily="sans-serif-light"
         android:gravity="center_horizontal"
@@ -47,7 +128,7 @@
         tools:text="19" />
 
     <TextView
-        android:id="@+id/detail_item_forecast_textview"
+        android:id="@+id/detail_forecast_textview"
         android:layout_width="0dp"
         android:fontFamily="sans-serif"
         android:gravity="center_horizontal"
@@ -57,7 +138,7 @@
         tools:text="Rainy" />
 
     <TextView
-        android:id="@+id/detail_item_low_textview"
+        android:id="@+id/detail_low_textview"
         android:layout_width="0dp"
         android:layout_marginBottom="@dimen/abc_list_item_padding_horizontal_material"
         android:fontFamily="sans-serif-light"
@@ -68,10 +149,9 @@
         tools:text="10" />
 
     <android.support.v7.widget.Space
+        android:layout_height="@dimen/detail_view_padding_vertical"
         app:layout_columnSpan="2"
         app:layout_columnWeight="1"
         app:layout_rowWeight="1" />
 
 </android.support.v7.widget.GridLayout>
-
-
