--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -1,221 +1,25 @@
 <!-- Master layout. -->
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-
-    <LinearLayout
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="?attr/actionBarSize"
+        android:background="@android:color/white" />
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="@android:color/white" />
+    <include layout="@layout/detail_today_grid"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="3"/>
 
-        <include
-            layout="@layout/detail_today_grid"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="3" />
-
-        <android.support.v7.widget.GridLayout
-            android:id="@+id/detail_additional_pane"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="2"
-            app:columnCount="2"
-            android:background="@color/detail_accent_pane_background"
-            android:paddingBottom="@dimen/abc_list_item_padding_horizontal_material"
-            android:paddingTop="@dimen/abc_list_item_padding_horizontal_material"
-            android:paddingLeft="@dimen/forecast_detail_horizontal_padding"
-            android:paddingStart="@dimen/forecast_detail_horizontal_padding"
-            android:paddingRight="@dimen/forecast_detail_horizontal_padding"
-            android:paddingEnd="@dimen/forecast_detail_horizontal_padding">
-
-            <TextView
-                android:id="@+id/detail_item_humidity_label_textview"
-                android:layout_height="wrap_content"
-                android:fontFamily="sans-serif"
-                android:gravity="center_vertical"
-                android:text="@string/humidity"
-                android:textAppearance="@style/TextAppearance.AppCompat.Title"
-                android:textColor="@color/detail_accent_label"
-                app:layout_columnWeight="1"
-                app:layout_gravity="fill"
-                app:layout_rowWeight="1" />
-
-            <TextView
-                android:id="@+id/detail_item_humidity_textview"
-                android:gravity="center_vertical"
-                tools:text="38%"
-                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
-                android:textColor="@android:color/white"
-                app:layout_gravity="fill"/>
-
-            <TextView
-                android:id="@+id/detail_item_pressure_label_textview"
-                android:fontFamily="sans-serif"
-                android:gravity="center_vertical"
-                android:text="@string/pressure"
-                android:textAppearance="@style/TextAppearance.AppCompat.Title"
-                android:textColor="@color/detail_accent_label"
-                app:layout_gravity="fill"
-                app:layout_rowWeight="1"/>
-
-            <TextView
-                android:id="@+id/detail_item_pressure_textview"
-                android:gravity="center_vertical"
-                tools:text="995 hPa"
-                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
-                android:textColor="@android:color/white"
-                app:layout_gravity="fill"/>
-
-            <TextView
-                android:id="@+id/detail_item_wind_label_textview"
-                android:fontFamily="sans-serif"
-                android:gravity="center_vertical"
-                android:text="@string/wind"
-                android:textColor="@color/detail_accent_label"
-                android:textSize="20sp"
-                app:layout_gravity="fill"
-                app:layout_rowWeight="1" />
+    <include layout="@layout/detail_extras_grid"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="2"/>
 
 
-            <TextView
-                android:id="@+id/detail_item_wind_textview"
-                android:gravity="center_vertical"
-                tools:text="4km/h NW"
-                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
-                android:textColor="@android:color/white"
-                app:layout_gravity="fill" />
-
-            <com.example.android.sunshine.app.Compass
-                android:id="@+id/mycompass"
-                android:layout_width="70dp"
-                android:layout_height="70dp"
-                android:layout_marginLeft="5dp"
-                android:layout_marginStart="5dp" />
-
-        </android.support.v7.widget.GridLayout>
-
-
-        <!--<LinearLayout-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:orientation="vertical"-->
-        <!--android:paddingLeft="16dp"-->
-        <!--android:paddingStart="16dp"-->
-        <!--android:paddingTop="16dp">-->
-
-        <!--<TextView-->
-        <!--android:id="@+id/detail_item_friendly_date_textview"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:fontFamily="sans-serif-condensed"-->
-        <!--android:textColor="@android:color/black"-->
-        <!--android:textSize="24sp" />-->
-
-        <!--<TextView-->
-        <!--android:id="@+id/detail_item_date_textview"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:paddingBottom="24dp"-->
-        <!--android:paddingTop="8dp"-->
-        <!--android:textColor="#646464"-->
-        <!--android:textSize="16sp" />-->
-
-        <!--<LinearLayout-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:orientation="horizontal"-->
-        <!--android:padding="16dp">-->
-
-        <!--<LinearLayout-->
-        <!--android:layout_width="0dp"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_weight="1"-->
-        <!--android:orientation="vertical">-->
-
-
-        <!--<TextView-->
-        <!--android:id="@+id/detail_item_high_textview"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_gravity="center"-->
-        <!--android:fontFamily="sans-serif-condensed"-->
-        <!--android:textColor="@android:color/black"-->
-        <!--android:textSize="96sp" />-->
-
-        <!--<TextView-->
-        <!--android:id="@+id/detail_item_low_textview"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_gravity="center"-->
-        <!--android:fontFamily="sans-serif-condensed"-->
-        <!--android:textSize="48sp" />-->
-        <!--</LinearLayout>-->
-
-        <!--<LinearLayout-->
-        <!--android:layout_width="0dp"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_weight="1"-->
-        <!--android:orientation="vertical"-->
-        <!--android:layout_gravity="center_horizontal">-->
-
-
-        <!--<ImageView-->
-        <!--android:id="@+id/detail_item_icon"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_gravity="center"-->
-        <!--android:adjustViewBounds="true"/>-->
-
-        <!--<TextView-->
-        <!--android:id="@+id/detail_item_forecast_textview"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_gravity="center"-->
-        <!--android:textAppearance="@android:style/TextAppearance.Large"-->
-        <!--android:textColor="#646464" />-->
-        <!--</LinearLayout>-->
-        <!--</LinearLayout>-->
-
-
-        <!--TODO This is the code I need to implement into the GridView-->
-
-        <!--<TextView-->
-        <!--android:id="@+id/detail_item_humidity_textview"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:textAppearance="@android:style/TextAppearance.Large" />-->
-
-        <!--<TextView-->
-        <!--android:id="@+id/detail_wind_textview"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:paddingBottom="4dp"-->
-        <!--android:paddingTop="4dp"-->
-        <!--android:textAppearance="@android:style/TextAppearance.Large" />-->
-
-        <!--<TextView-->
-        <!--android:id="@+id/detail_pressure_textview"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:textAppearance="@android:style/TextAppearance.Large" />-->
-
-        <!--<com.example.android.sunshine.app.Compass-->
-        <!--android:id="@+id/mycompass"-->
-        <!--android:layout_width="70dp"-->
-        <!--android:layout_height="70dp"-->
-        <!--android:layout_marginLeft="5dp"-->
-        <!--android:layout_marginStart="5dp"/>-->
-
-        <!--</LinearLayout>-->
-
-    </LinearLayout>
-</ScrollView>
+</LinearLayout>
