--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -2,23 +2,26 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity$ForecastFragment">
+    tools:context="com.example.android.sunshine.app.ForecastFragment">
 
     <ListView
         android:id="@+id/listview_forecast"
+        style="@style/ForecastListStyle"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        style="@style/ForecastListStyle"/>
+        android:layout_height="match_parent" />
 
     <TextView
-        android:id="@+id/no_wx_data_view"
+        android:id="@+id/listview_forecast_empty"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/empty_forecast_list"
-        android:padding="16dp"
-        />
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingEnd="@dimen/activity_horizontal_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingStart="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:text="@string/empty_forecast_list" />
 
 </FrameLayout>
-
 
 
